maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:27: error: forward reference extends over definition of variable etat
    etat match {
    ^